--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -1,72 +1,13 @@
 <div class="row">        <!-- first two days -->
   <div class="col-md-6"> <!-- left column -->
-    <h3>Day 1</h3>
+    <h3>Demo session on 7, April 2021</h3>
     <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td>Before starting</td>
-        <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
+      <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
+      <tr> <td>8:30</td>  <td>Introduction to RNA-seq</td> </tr>
+      <tr> <td>9:00</td>  <td>The technologies used for RNA-seq Analysis</td> </tr>
+      <tr> <td>9:15</td>  <td>Pre-processing of data with CellSingleExperiment(Continued)</td> </tr>
+      <tr> <td>9:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>9:50</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
+      <tr> <td>16:40</td>  <td>END</td> </tr>
     </table>
   </div>
-  <div class="col-md-6"> <!-- right column -->
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-    </table>
-  </div>
-</div>
-<div class="row">        <!-- days 3 and 4 -->
-  <div class="col-md-6"> <!-- left column -->
-    <h3>Day 3</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-    </table>
-  </div>
-  <div class="col-md-6"> <!-- right column -->
-    <h3>Day 4</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td>End</td>
-        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-    </table>
-  </div>
-</div>
