--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -5,7 +5,7 @@
       <tr> <td>Before</td> <td><a href="{{ site.pilot_pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
       <tr> <td>8:30</td>  <td><a href="https://carpentries-incubator.github.io/scrna-seq-analysis/">Introduction to RNA-seq</a></td></tr>
       <tr> <td>9:00</td>  <td><a href="https://carpentries-incubator.github.io/scrna-seq-analysis/">The technologies used for RNA-seq Analysis</a></td></tr>
-      <tr> <td>9:15</td>  <td><a href="https://carpentries-incubator.github.io/scrna-seq-analysis/">Pre-processing of data with CellSingleExperiment</a></td></tr>
+      <tr> <td>9:15</td>  <td><a href="https://carpentries-incubator.github.io/scrna-seq-analysis/">Pre-processing of data with SingleCellExperiment</a></td></tr>
       <tr> <td>9:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>9:50</td>  <td><a href="{{ site.pilot_post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:40</td>  <td>END</td> </tr>
